force-app/main/default/objects/DocGeneratorDataSource__c/DocGeneratorDataSource__c.object-meta.xml
<CustomObject>
    <description>PacPoint-AZ102419 - Created for PVL phase 1</description>
    <label>Doc Generator Data Source</label>
    <nameField>
        <displayFormat>DGDS-{0000000}</displayFormat>
        <label>Doc Generator Data Source No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Generator Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>