force-app/main/default/objects/DocGeneratorDataSource__c/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <description>Used to specify the default value for the data source.
PacPoint-AZ010520 - Created for PVL phase 1</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>