force-app/main/default/objects/DocGeneratorDataSource__c/fields/DocGeneratorSettings__c.field-meta.xml
<CustomField>
    <fullName>DocGeneratorSettings__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>PacPoint-AZ102419 - Created for PVL phase 1</description>
    <label>Doc Generator Settings</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>Doc Generator Data Sources</relationshipLabel>
    <relationshipName>Doc_Generator_Data_Sources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>