force-app/main/default/objects/DocGeneratorDataSource__c/fields/ParentSourceField__c.field-meta.xml
<CustomField>
    <fullName>ParentSourceField__c</fullName>
    <description>PacPoint-AZ110919 - Created for PVL phase 1</description>
    <label>Parent Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>