force-app/main/default/objects/DocGeneratorDataSource__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>PacPoint-AZ102419 - Created for PVL phase 1</description>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>