force-app/main/default/objects/DocGeneratorDataSource__c/fields/Query_conditions__c.field-meta.xml
<CustomField>
    <fullName>Query_conditions__c</fullName>
    <description>PacPoint-AZ121719 - Created for PVL phase 1</description>
    <label>Query conditions</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>