force-app/main/default/objects/DocGeneratorDataSource__c/fields/Row_Specs__c.field-meta.xml
<CustomField>
    <fullName>Row_Specs__c</fullName>
    <description>PacPoint-AZ102419 - Created for PVL phase 1</description>
    <label>Row Specs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>