force-app/main/default/objects/DocGeneratorDataSource__c/fields/SourceName__c.field-meta.xml
<CustomField>
    <fullName>SourceName__c</fullName>
    <description>PacPoint-AZ102419 - Created for PVL phase 1</description>
    <label>Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>